--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
+#language: java
+#sudo: false # faster builds
+#
+#cache:
+#  directories:
+#    - $HOME/.m2
+#jdk:
+#  - oraclejdk11
+#
+#install: travis_wait 30 mvn install
+
+
 language: java
-sudo: false # faster builds
-
-cache:
-  directories:
-    - $HOME/.m2
-jdk:
-  - oraclejdk11
-
-install: travis_wait 30 mvn install
+jdk: oraclejdk8
+install: true
+script: ./mvnw clean install
